--- a/src/app/workers-details/workers-details.component.html
+++ b/src/app/workers-details/workers-details.component.html
@@ -1,1 +1,45 @@
-<p>workers-details works!</p>
+<div fxLayout="column" style="margin-left: 20px;">
+    <h1>Worker Profile</h1>
+    <h3>{{character.name}}</h3>
+    <img style="height: 20%; width:20%; align-self: center;" src="{{this.character.image}}">
+    <b>ID</b>
+    {{character.id}}
+    <b>Name</b>
+    {{character.name}}
+    <b>Status</b>
+    {{character.status}}
+    <b>Created</b>
+    {{character.created}}
+    <hr>
+    <h2>Origin</h2>
+    <b>Type</b>
+    {{characterDetails?.origin?.type}}
+    <b>Name</b>
+    {{characterDetails?.origin?.name}}
+    <b>Dimension</b>
+    {{characterDetails?.origin?.dimension}}
+    <hr>
+    <h2>Location</h2>
+    <b>Type</b>
+    {{characterDetails?.location?.type}}
+    <b>Name</b>
+    {{characterDetails?.location?.name}}
+    <b>Dimension</b>
+    {{characterDetails?.location?.dimension}}
+    <hr>
+    <h2>Episodes</h2>
+    <div >
+        <table border="1">
+            <tr>
+                <th>Episode ID</th>
+                <th>Name</th>
+                <th>Air Date</th>
+              </tr>
+              <tr *ngFor="let episode of characterDetails?.episode" >
+                <td>{{episode?.id}}</td>
+                <td>{{episode?.name}}</td>
+                <td>{{episode?.air_date}}</td>
+              </tr>              
+        </table>
+    </div>
+</div>
