--- a/src/app/workers-list/workers-list.component.html
+++ b/src/app/workers-list/workers-list.component.html
@@ -1,16 +1,30 @@
-<div *ngFor="let character of this.characters" style="border: 1px; border-color: black;">
-    <img style="height: 5%; width:5%;" src="{{character.image}}">
-    <div fxLayout="row">
+<div style="margin-left: 20px;">
+    <h1>
+        All Workers
+    </h1>
+    <h3>
+        Search to find workers
+    </h3>
+    <form [formGroup]="this.searchForm">
+        <input type="text" style="width:500px;" placeholder="Type the worker name to start searching"
+            formControlName="searchFormControl">
+            <div style="margin-top: 15px;margin-bottom:15px;">
+        <div>Total Pages: {{pageInfo?.pages}}</div>
+        <div>Current Page: {{pageInfo?.next-1}}</div>
+        <button (click)="prevPage()">Prev Page: {{pageInfo?.prev}}</button>
+        <button (click)="nextPage()">Next Page: {{pageInfo?.next}}</button>
+    </div>
+    </form>
+    <div *ngFor="let character of this.characters" style="border: 1px; border-color: black;">
+        <img style="height: 5%; width:5%;" src="{{character.image}}">
         <span>
-            <span style="vertical-align: top;">
-                {{character.name}}                
-                {{character.location.name}}
-            </span>
-            <span style="vertical-align:top; align-content: flex-end;" fxLayout="row" fxLayoutAlign="end">
-                {{character.id}}
+            <span style="vertical-align:top;">
+                Name: {{character.name}} |
+                Location: {{character.location.name}} |                
+                Id: {{character.id}}                
+                <button style="background: transparent; border-color: unset; box-shadow:none; float:right;"
+                    (click)="onWorkerSelected(character)">></button>
             </span>
         </span>
-        <button style="background: transparent; border-color: unset; box-shadow:none; float:right;" (click)="onWorkerSelected(character)">></button>
-
     </div>
 </div>
