--- a/src/app/workers-details/workers-details.component.scss
+++ b/src/app/workers-details/workers-details.component.scss
@@ -1,3 +1,9 @@
 span {
     margin-top: 5px;
 }
+.worker-image {
+    height: 20%; width:20%; align-self: center;
+}
+.worker-margin{
+    margin-left: 20px;
+}
