Advanced: Local storage and validation
- search accepts only alphabets gives error otherwise and does not search
- once  visited a worker, localstorage stores its id to show the worker later as visited

--- a/src/app/workers-details/workers-details.component.html
+++ b/src/app/workers-details/workers-details.component.html
@@ -2,6 +2,8 @@
     <h1>Worker Profile</h1>
     <h3>{{character.name}}</h3>
     <img class="worker-image" src="{{this.character.image}}">
+    <b>Visited</b>
+    {{this.visited}}
     <b>ID</b>
     {{character.id}}
     <b>Name</b>
